--- a/app/views/forges/index.html.slim
+++ b/app/views/forges/index.html.slim
@@ -1,1 +1,12 @@
-= "index"
+h1
+    | Forges
+table
+    tr
+        - @forge.attributes.each do |key, _|
+            th
+                = key
+    tr
+        - @forges.each do |forge|
+            - forge.attributes.each do |_, value|
+                td
+                    = value
