--- a/app/views/forges/show.html.slim
+++ b/app/views/forges/show.html.slim
@@ -1,1 +1,9 @@
-= "show"
+= link_to "Forgesに戻る", forges_path 
+h1
+    = "Forges##{@forge.id}"
+dl
+    - @forge.attributes.each do |key, value|
+        dt
+            = key
+        dd
+            = value
