item, stageのindex, showアクセスを追加

--- a/app/views/items/show.html.slim
+++ b/app/views/items/show.html.slim
@@ -1,1 +1,9 @@
-= "show"
+= link_to "Itemsに戻る", forges_path 
+h1
+    = "Items##{@forge.id}"
+dl
+    - @forge.attributes.each do |key, value|
+        dt
+            = key
+        dd
+            = value
