--- a/app/views/items/index.html.slim
+++ b/app/views/items/index.html.slim
@@ -1,1 +1,12 @@
-= "index"
+h1
+    | Items
+table
+    tr
+        - @item.attributes.each do |key, _|
+            th
+                = key
+    - @items.each do |item|
+        tr
+            - item.attributes.each do |_, value|
+                td
+                    = value
