全Modelのindex, showアクセスを追加

--- a/app/views/characters/show.html.slim
+++ b/app/views/characters/show.html.slim
@@ -1,1 +1,9 @@
-= "show"
+= link_to "Charactersに戻る", characters_path 
+h1
+    = "Characters##{@character.id}"
+dl
+    - @character.attributes.each do |key, value|
+        dt
+            = key
+        dd
+            = value
