--- a/app/views/characters/index.html.slim
+++ b/app/views/characters/index.html.slim
@@ -1,1 +1,12 @@
-= "index"
+h1
+    | Characters
+table
+    tr
+        - @character.attributes.each do |key, _|
+            th
+                = key
+    - @characters.each do |character|
+        tr
+            - character.attributes.each do |_, value|
+                td
+                    = value
