--- a/app/views/drops/index.html.slim
+++ b/app/views/drops/index.html.slim
@@ -1,1 +1,12 @@
-= "index"
+h1
+    | Drops
+table
+    tr
+        - @drop.attributes.each do |key, _|
+            th
+                = key
+    - @drops.each do |drop|
+        tr
+            - drop.attributes.each do |_, value|
+                td
+                    = value
