ヘッダーに各所へのリンクを追加

--- a/app/views/items/show.html.slim
+++ b/app/views/items/show.html.slim
@@ -3,7 +3,7 @@ h1
     = "Items##{@item.id}"
 dl
     - @item.attributes.each do |key, value|
-        dt
+        dt.btn
             = key
         dd
             = value
