--- a/app/views/layouts/_common_header.html.slim
+++ b/app/views/layouts/_common_header.html.slim
@@ -1,2 +1,17 @@
 header
-    img.header_image src="images/header.png"
+    img.header_image src="/images/header.png"
+    .header_menu
+        a.item href="/"
+            | Top
+        a.item href="/items"
+            | Items
+        a.item href="/characters"
+            | Characters
+        a.item href="/drops"
+            | Drops
+        a.item href="/forges"
+            | Forges
+        a.item href="/stages"
+            | Stages
+        a.item href="/equips"
+            | Equips
