--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,6 +25,12 @@ header{
     width: 100%;
     .header_image{
         width: 100%;
-
+    }
+    .header_menu{
+        display: flex;
+        flex-direction: row;
+        .item{
+            padding: 10px;
+        }
     }
 }
