アイテムの画像表示に対応

--- a/app/views/items/show.html.slim
+++ b/app/views/items/show.html.slim
@@ -2,6 +2,9 @@
 = link_to "Itemsに戻る", items_path 
 h1
     = "Items##{@item.id}"
+
+= render partial: "partials/item", locals: {item: @item}
+
 dl
     - @item.affective_parameters.each do |key, value|
             dt
