--- a/app/views/partials/_item.html.slim
+++ b/app/views/partials/_item.html.slim
@@ -1,3 +1,3 @@
 a href="/items/#{item.id}"
     //TODO: 画像IDに対応
-    img.item_image src="/images/items/1.png" 
+    img.item_image src="#{item.image_path}"
