--- a/app/views/top_pages/index.html.slim
+++ b/app/views/top_pages/index.html.slim
@@ -1,14 +1,14 @@
 h1
-    トップ画面
-.
-    = link_to  "characters", characters_path 
-.
-    = link_to  "drops", drops_path 
-.
-    = link_to  "equips", equips_path 
-.
-    = link_to  "forges", forges_path 
-.
-    = link_to  "items", items_path 
-.
-    = link_to  "stages", stages_path 
+  | トップ画面
+div
+  = link_to  "characters", characters_path
+div
+  = link_to  "drops", drops_path
+div
+  = link_to  "equips", equips_path
+div
+  = link_to  "forges", forges_path
+div
+  = link_to  "items", items_path
+div
+  = link_to  "stages", stages_path
