アイテム一覧はランクごとの分類を表示

--- a/app/views/items/index.html.slim
+++ b/app/views/items/index.html.slim
@@ -1,20 +1,9 @@
 - provide(:title , "Items")
 h1
   | Items
-table
-  tr
-    th
-      | 画像
-  - @item.attributes.each do |key, _|
-    th
-      = key
-  - @items.each do |item|
-    - unless item.is_material
-      tr
-        td
-          img.item_image_mini src="#{item.image_path}"
-        td
-          = link_to "#{item.id}", item_path(item.id)
-        - item.attributes.except("id").each do |_, value|
-          td
-            = value
+- @items_sorted_by_rank.each do |key, items|
+  - unless items.empty?
+    h2
+      | rank #{items.first.rank}
+    - items.each do |item|
+      = render partial: "partials/item", locals: {item: item}
