--- a/app/views/characters/show.html.slim
+++ b/app/views/characters/show.html.slim
@@ -20,4 +20,4 @@ table
         = rank
       - equips.each do |equip|
         td
-          = equip.item.name
+          = render partial: "partials/item", locals: {item: equip.item}
