トップ絵にリンクを貼る

--- a/app/views/layouts/_common_header.html.slim
+++ b/app/views/layouts/_common_header.html.slim
@@ -1,5 +1,6 @@
 header
-  img.header_image src="/images/header.png"
+  a href="/"
+    img.header_image src="/images/header.png"
   .header_menu
     a.item href="/"
       | Top
