真の要求素材に絞り込んで検索をかける

--- a/app/views/characters/show.html.slim
+++ b/app/views/characters/show.html.slim
@@ -21,3 +21,11 @@ table
       - equips.each do |equip|
         td
           = render partial: "partials/item", locals: {item: equip.item}
+
+h2
+  | 最強にするのに必要な素材(金装備以上)
+ul
+  - @total_equips.each do |item, count|
+    a href="/items/#{item.id}"
+      li
+        = "#{item.name} x #{count}"
