--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,9 @@
  *= require_self
  */
 
+$gray: #EFEFEF;
+$black: #333333;
+
 body{
     width: 1100px;
     margin: 0px auto;
@@ -35,10 +38,39 @@ header{
     }
 }
 
-.item_image{
+.item_partial{
+  position: relative;
+  display: inline-block;
+  width: 64px;
+  height: 64px;
+  .text{
+    font-size: 8px;
+    background-color: $gray;
+    color: $black;
+    z-index: 100;
+  }
+  .name{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+  }
+  .id{
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+  }
+  .is_material{
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+  }
+  .image{
     width: 64px;
     height: 64px;
+    z-index: 10;
+  }
 }
+
 
 .item_image_mini{
     width: 32px;
