--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,7 @@
 
 $gray: #EFEFEF;
 $black: #333333;
+$alert: #EF92AE;
 
 body{
     width: 1100px;
@@ -68,6 +69,12 @@ header{
     width: 64px;
     height: 64px;
     z-index: 10;
+  }
+  .null_image{
+    width: 64px;
+    height: 64px;
+    z-index: 10;
+    background-color: $alert;
   }
 }
 
