--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,7 +20,7 @@ $main: #80569c;
 $accent: #58c175;
 
 body{
-  width: 1100px;
+  width: 800px;
   margin: 0px auto;
   border-left: 1px solid #123123;
   border-right: 1px solid #123123;
@@ -46,6 +46,12 @@ header{
       padding: 10px;
     }
   }
+}
+
+.character{
+  width: 48px;
+  height: 48px;
+  margin: 2px;
 }
 
 .item_box{
