--- a/app/views/partials/_character.html.slim
+++ b/app/views/partials/_character.html.slim
@@ -1,2 +1,2 @@
 a href="/characters/#{character.id}"
-  img.character_image src="#{character.image_path}"
+  img.character src="#{character.image_path}"
