--- a/app/views/layouts/_shims.html.slim
+++ b/app/views/layouts/_shims.html.slim
@@ -6,3 +6,5 @@ title
 
 = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
 = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+
+meta name="viewport" content="width=device-width,initial-scale=1"
