--- a/app/assets/stylesheets/reset.scss
+++ b/app/assets/stylesheets/reset.scss
@@ -20,8 +20,11 @@ time, mark, audio, video {
   background: transparent;
 }
 
-
 a{
   text-decoration: none;
   padding: 0px 0px;
+}
+
+li{
+  list-style: none;
 }
