ogタグの埋め込み

--- a/app/views/characters/index.html.slim
+++ b/app/views/characters/index.html.slim
@@ -1,4 +1,7 @@
-- provide(:title , "Characters")
+- provide(:title , "キャラ一覧")
+- provide(:url , characters_url)
+- provide(:image_path, ogp_image)
+
 h1
   | Characters
 
