--- a/app/views/items/index.html.slim
+++ b/app/views/items/index.html.slim
@@ -1,4 +1,6 @@
 - provide(:title , "Items")
+- provide(:url , items_url)
+- provide(:image_path, ogp_image)
 h1
   | Items
 - @items_sorted_by_rank.each do |key, items|
