--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,5 +1,6 @@
 head
   = render "layouts/shims"
+  = render partial: "layouts/ogp", locals: {title: (yield :title), url: (yield :url), image_path: (yield :image_path)}
 body
   = render "layouts/common_header"
   = yield
