--- a/app/views/stages/show.html.slim
+++ b/app/views/stages/show.html.slim
@@ -1,5 +1,8 @@
 - provide(:title , @stage.id.to_s)
-= link_to "Stagesに戻る", stages_path 
+- provide(:url, stage_url(@stage))
+- provide(:image_path, ogp_image)
+
+= link_to "Stagesに戻る", stages_path
 h1
   = "Stages##{@stage.id}"
 dl
