twitter用のタグもいるんだったな...

--- a/app/views/layouts/_ogp.html.slim
+++ b/app/views/layouts/_ogp.html.slim
@@ -4,3 +4,5 @@ meta property="og:url" content=url
 meta property="og:image" content=image_path
 meta property="og:site_name" content="プリコネRアイテム素材効率劇場"
 meta property="og:description" content="プリコネの素材周りのデータベースです。マスタデータの構造を定義してページ生成をしているので、wikiシステムではできない素材の再帰的な検索などが可能です。"
+meta name="twitter:card" content="summary"
+meta name="twitter:site" content="@jyll"
