characters#showをちゃんと作った

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -144,8 +144,8 @@ header{
   height: 32px;
 }
 
-.item_parameters{
-  .item_parameter{
+.parameters{
+  .parameter{
     .name{
       display: inline-block;
       width: 200px;
