いらんコントローラーを消す

--- a/app/views/layouts/_common_header.html.slim
+++ b/app/views/layouts/_common_header.html.slim
@@ -3,16 +3,10 @@ header
     img.header_image src="/images/header.png"
   .header_menu
     a.item href="/"
-      | Top
+      | トップ
     a.item href="/items"
-      | Items
+      | アイテム
     a.item href="/characters"
-      | Characters
-    a.item href="/drops"
-      | Drops
-    a.item href="/forges"
-      | Forges
+      | キャラ
     a.item href="/stages"
-      | Stages
-    a.item href="/equips"
-      | Equips
+      | ドロップ
