--- a/app/views/stages/index.html.slim
+++ b/app/views/stages/index.html.slim
@@ -8,9 +8,7 @@ table
   - @stages.each do |stage|
     tr
       td
-        = link_to "#{stage.id}", stage_path(stage.id)
-      td
-        = stage.name
+        = link_to "#{stage.name}", stage_path(stage.id)
       // order(:priority) はpreloadの意味がなくなるのでsort_byでソートする
       - stage.drops.sort_by(&:priority).each do |drop|
         td
