トップ絵置こう

--- a/app/views/top_pages/index.html.slim
+++ b/app/views/top_pages/index.html.slim
@@ -6,6 +6,14 @@ h1
   | プリコネRアイテム素材効率劇場/トップ
 
 h2
+  | トップ絵
+
+img.top_illust src="/images/top_illust/1.png"
+
+p
+  | じりじりと距離を取ろうとするキョウカちゃんです。
+
+h2
   | 便利リンク
 
 div
