wishlistを選択できる(パラメータ付き再読込はまだ)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -177,3 +177,10 @@ header{
 .tweet{
   margin-top: 20px;
 }
+
+.clickable_item{
+  border: 2px solid transparent;
+}
+.selected{
+  border: 2px solid $accent;
+}
