ほしいものリスト検索

--- a/app/views/stages/index.html.slim
+++ b/app/views/stages/index.html.slim
@@ -4,12 +4,5 @@
 
 h1
   | Stages
-table
-  - @stages.each do |stage|
-    tr
-      td
-        = link_to "#{stage.name}", stage_path(stage.id)
-      // order(:priority) はpreloadの意味がなくなるのでsort_byでソートする
-      - stage.drops.sort_by(&:priority).each do |drop|
-        td
-          = render partial: "partials/item", locals: {item: drop.item}
+
+= render partial: "partials/stages", locals: {stages: @stages}
