--- a/app/views/characters/show.html.slim
+++ b/app/views/characters/show.html.slim
@@ -36,3 +36,21 @@ h2
 .item_box
   - @total_equips.each do |item, amount|
     = render partial: "partials/item_with_amount", locals: {item: item, amount: amount}
+
+h2
+  | ランク上げ
+
+- 11.upto(@character.max_rank - 1).each do |rank|
+  h3
+    | rank#{rank} → #{@character.max_rank}
+  .parameter_diff_box
+    ul.parameter_diffs
+      li.header
+        | 上昇パラメータ
+      - @character.rank_diffs(rank).select{|_,v| v.positive?}.each do |key, value|
+        = render partial: "partials/parameter_diff", locals: {name: Item.parameters[key], value: value} unless value.zero?
+    ul.parameter_diffs
+      li.header
+        | 下降パラメータ
+      - @character.rank_diffs(rank).select{|_,v| v.negative?}.each do |key, value|
+        = render partial: "partials/parameter_diff", locals: {name: Item.parameters[key], value: value} unless value.zero?
