--- a/app/views/characters/show.html.slim
+++ b/app/views/characters/show.html.slim
@@ -43,14 +43,4 @@ h2
 - 11.upto(@character.max_rank - 1).each do |rank|
   h3
     | rank#{rank} → #{@character.max_rank}
-  .parameter_diff_box
-    ul.parameter_diffs
-      li.header
-        | 上昇パラメータ
-      - @character.rank_diffs(rank).select{|_,v| v.positive?}.each do |key, value|
-        = render partial: "partials/parameter_diff", locals: {name: Item.parameters[key], value: value} unless value.zero?
-    ul.parameter_diffs
-      li.header
-        | 下降パラメータ
-      - @character.rank_diffs(rank).select{|_,v| v.negative?}.each do |key, value|
-        = render partial: "partials/parameter_diff", locals: {name: Item.parameters[key], value: value} unless value.zero?
+  = render partial: "partials/parameter_diff_box", locals: {character: @character, rank: rank}
