--- a/app/views/partials/_parameter_diff.html.slim
+++ b/app/views/partials/_parameter_diff.html.slim
@@ -1,5 +1,5 @@
 li.parameter_diff
-  .name
+  div class=(important ? "name important_parameter" : "name")
     = name
   - if value.positive?
     .value.positive
