--- a/app/views/rank_diffs/index.html.slim
+++ b/app/views/rank_diffs/index.html.slim
@@ -15,7 +15,7 @@ p
   | キャラの並び順のとおりに並んでいます。
 
 p
-  | CSSは...そのまああとで整えるので先に機能だけリリースさせてください...
+  | そのキャラにとっての重要パラメータ(火力職なら攻撃力とクリティカル、タンクなら耐久力周り、ヒーラーなら魔法攻撃力と回復量上昇)は太字になります。あくまで役割レベルの分類なので、イリヤの耐久力とかプリンの回復量とかは考慮に入っていません。参考程度にどうぞ
 
 h2
   | 前衛
